Transfert, second commit

--- a/fcfa/templates/layouts/base.html
+++ b/fcfa/templates/layouts/base.html
@@ -34,6 +34,14 @@
       font-weight: 900;
     }
 
+    .titre {
+      color: #fff;
+      margin: 0px;
+      text-transform: uppercase!important;
+      font-size: 22px;
+      font-weight: 900;
+    }
+
     .left_area span {
       color: #19B3D3;
     }
@@ -209,11 +217,11 @@
       </center>
   </div>
     <hr>
-    <a href="{% url 'home' %}"><i class="fas fa-chalkboard-teacher"></i><span>Historique</span></a>
+    <a href="{% url 'home' %}"><i class="fas fa-chalkboard-teacher"></i><span>Abaut/Aide</span></a>
     <hr>
     <a href="{% url 'depense' %}"><i class="fas fa-user-graduate"></i><span>Dépense</span></a>
     <hr>
-    <a href="{% url 'depot' %}"><i class="fas fa-user-graduate"></i><span>Dépot</span></a>
+    <a href="{% url 'depot' %}"><i class="fas fa-user-graduate"></i><span>Dépôt</span></a>
     <hr>
     <a href="{% url 'retrait' %}"><i class="fas fa-user-graduate"></i><span>Retrait</span></a> 
     <hr>
