--- a/fcfa/templates/layouts/base.html
+++ b/fcfa/templates/layouts/base.html
@@ -33,6 +33,18 @@
       font-size: 22px;
       font-weight: 900;
     }
+    .left_area a {
+      color: #fff;
+      margin: 0px;
+      text-transform: uppercase;
+      font-size: 17px;
+      font-weight: 700;
+    }
+
+    .left_area a:hover {
+      color: #30323a;
+      text-decoration: none;
+    }
 
     .titre {
       color: #fff;
@@ -202,7 +214,8 @@
       <i class="fas fa-bars" id="sidebar_btn"></i>
     </label>
     <div class="left_area">
-      <h3>Gestion des Transferts/Retraits</h3>
+      <h3 style="display: inline;">Gestion des Transferts/Retraits</h3>
+      <a href="{% url 'deconnection' %}" style="float: right;">Déconnection</a>
     </div>
   </header>
   <!--Fin entête-->
