Transfert, second commit

--- a/fcfa/templates/layouts/base.html
+++ b/fcfa/templates/layouts/base.html
@@ -230,7 +230,7 @@
       </center>
   </div>
     <hr>
-    <a href="{% url 'home' %}"><i class="fas fa-chalkboard-teacher"></i><span>Abaut/Aide</span></a>
+    <a href="{% url 'home' %}"><i class="fas fa-chalkboard-teacher"></i><span>About/Aide</span></a>
     <hr>
     <a href="{% url 'depense' %}"><i class="fas fa-user-graduate"></i><span>Dépense</span></a>
     <hr>
