Transfert, second commit

--- a/fcfa/templates/page/index.html
+++ b/fcfa/templates/page/index.html
@@ -11,8 +11,10 @@
 </head> 
 <body>
 	<div class="error_page">
+		<div style="position: fixed;top: 10%;margin-left: 32%;color: #fff;">
+			<h1>Gestion des Transferts/Retraits</h1>
+		</div>
 		<div class="error-top">
-
 			<img src="{% static 'dashmob/images/eces_logo.png' %}" alt="logo-eces" width="140" height="100">
 
 			<div class="login">
